i have edited the alt attribute for all images

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <img src="images/bg-pattern-top.svg" id="topImg">
-  <img src="images/bg-pattern-bottom.svg" id="bottomImg">
+  <img src="images/bg-pattern-top.svg" id="topImg" alt="pattern-top">
+  <img src="images/bg-pattern-bottom.svg" id="bottomImg" alt="pattern-bottom">
 
   <div class="Profile">
     <div class="image">
-      <img src="images/bg-pattern-card.svg" alt="">
+      <img src="images/bg-pattern-card.svg" alt="pattern-card">
     </div>
-    <img src="images/image-victor.jpg" alt="" id="vector">
+    <img src="images/image-victor.jpg" alt="image-victor" id="vector">
     
     <div class="name">
       <h2>Victor Crest <span> 26</span></h2>
